[FEAT] reactive forms in login-page.component & html auth-layout.component

--- a/mean-auth-angular-frontend/src/app/auth/layouts/auth-layout/auth-layout.component.html
+++ b/mean-auth-angular-frontend/src/app/auth/layouts/auth-layout/auth-layout.component.html
@@ -1,7 +1,14 @@
-<p>auth-layout works!</p>
+<div class="limiter">
+  <div
+    class="container-login100"
+    style="background-image: url('../../../../assets/images/bg-01.jpg')"
+  >
+    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+      <!-- FORMA 1 -->
+      <!-- <router-outlet></router-outlet> -->
 
-<!-- FORMA 1 -->
-<!-- <router-outlet></router-outlet> -->
-
-<!-- FORMA 2 -->
-<router-outlet />
+      <!-- FORMA 2 -->
+      <router-outlet />
+    </div>
+  </div>
+</div>
