--- a/mean-auth-angular-frontend/src/app/auth/pages/login-page/login-page.component.html
+++ b/mean-auth-angular-frontend/src/app/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<form class="login100-form" [formGroup]="myForm" (ngSubmit)="login()">
+<form class="login100-form" [formGroup]="myForm" (ngSubmit)="handleLogin()">
   <span class="login100-form-title p-b-49">Login</span>
 
   <div class="wrap-input100 m-b-23">
